# UPServer

./: .gitignore  CLAUDE.md  README.md  app.py  app.wsgi.example  compose.yaml  config.example.json  config.local.json  filesystem.py  goindex.js  log.py  requirements.txt  upserver.bsdesign
.docker/: Dockerfile  apache.conf
.github/workflows/: cd.yaml  ghcr.yaml
backend/: README.md  app.py  app.wsgi.example  config.example.json  filesystem.py  pyproject.toml  requirements.txt
backend/oryups/: cli.py  config.py  filesystem.py  main.py  response.py
backend/oryups/routers/: admin.py  api.py  api_v1.py  assets.py  files.py  root.py
backend/oryups/services/: admin.py  admin_session.py  cache.py  reaper.py
backend/oryups/utils/: expiry.py  upload.py  validation.py
backend/tests/: conftest.py  test_api_info.py  test_api_v1.py  test_assets.py  test_error_handlers.py  test_expiry.py  test_files.py  test_root.py  test_security.py
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  error.svelte  global.css
frontend/src/lib/: api.ts
frontend/src/lib/components/: Footer.svelte  Nav.svelte  Preview.svelte
frontend/src/lib/stores/: admin-session.ts  info.ts  owner.ts  theme.ts
frontend/src/lib/utils/: format.ts  kind.ts  sanitize.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/[...path]/: +page.svelte
frontend/src/routes/[fileid]/[filename]/: +page.svelte  +page.ts
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/admin/[fileid]/[filename]/: +page.svelte
frontend/src/routes/contacts/: +page.svelte
frontend/static/: error.html
static/: contacts.html  error.html  index.html  item.html  pricing.html
static/assets/js/: drag-n-drop.min.js  filecheck.min.js  script.min.js
