[project]
name = "ory-upserver"
version = "0.1.0"
description = "Simple upload server backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "prompt-toolkit",
]

[project.scripts]
ups = "oryups.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oryups"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
