[project]
name = "ory-upserver"
version = "1.1.1"
description = "Simple UPload Server"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "DoyunShin" }]
requires-python = ">=3.11"
keywords = ["upload", "fileserver", "fastapi", "self-hosted"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "prompt-toolkit",
]

[project.urls]
Homepage = "https://github.com/DoyunShin/UPServer"
Source = "https://github.com/DoyunShin/UPServer"
Issues = "https://github.com/DoyunShin/UPServer/issues"

[project.scripts]
ups = "oryups.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# All static files (the SvelteKit build under oryups/static/ and the bundled
# config example shipped at oryups/config.example.json) live inside the
# package, so hatchling picks them up automatically.
packages = ["oryups"]

[tool.hatch.build.targets.sdist]
include = [
    "oryups/**",
    "tests/**",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
